update resume, images in work page showing caption now

--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -28,7 +28,7 @@
         </a>
         <a href="../about" >About</a>
         <a
-        href="https://drive.google.com/file/d/1aYkbI1Z-brlo3FeWJqVnlnxskvi6ihHu/view?usp=sharing"
+        href="https://docs.google.com/document/d/1WYPBiH9gtH5_TwxMKfXFyviGZQjsrY-B/edit?usp=sharing&ouid=102465668666867636372&rtpof=true&sd=true"
         >Resume</a
         >
       </div>
