--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -20,10 +20,10 @@
         
         
         <!-- Right Side - Image -->
-        <div class="h-60 md:absolute md:top-0 md:right-0 md:w-2/5 md:h-svh overflow-hidden"> 
+        <div class="z-0 h-60 md:absolute md:top-0 md:right-0 md:w-2/5 md:h-svh overflow-hidden"> 
             <img src="https://cdn.sanity.io/images/rnk0k1nk/production/77bfecd332da17ba9e69bf060ba1e9eb67d41bc8-4619x7266.jpg" alt="Inkbrush painting of a tree" class="w-full h-full object-cover" />
             <!-- Image Overlay -->
-            <!-- <div class="absolute inset-0 bg-gradient-to-b from-black/50 to-transparent"></div> -->
+            <!-- <div class="absolute inset-0 bg-gradient-to-b from-dark/50 to-transparent"></div> -->
         </div>
     </div>
 </section>
