--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -23,7 +23,7 @@ const experiences: Experience[] = await sanityClient.fetch(`
 <Layout>
 
 	<!-- Hero Section -->
-    <section class="bg-dark-beige border-b border-dark">
+    <section class="bg-dark-beige">
         <div class="container-custom min-h-screen flex flex-col md:flex-row pt-20 pb-16 gap-10 md:pt-10">
             <div class="md:w-1/2 flex flex-col gap-4 flex flex-col justify-center">
                 <!-- Left Side - Intro -->
@@ -37,7 +37,7 @@ const experiences: Experience[] = await sanityClient.fetch(`
             
             <!-- Right Side - Image -->
             <div class="md:w-1/2 overflow-hidden flex justify-end items-end"> 
-                <img src="https://cdn.sanity.io/images/rnk0k1nk/production/bb4fbceeb5d300985534664bdb5f096c445bb149-857x1284.jpg" alt="Photo of Ciel Park" class="h-140 object-cover border border-dark" />
+                <img src="https://cdn.sanity.io/images/rnk0k1nk/production/bb4fbceeb5d300985534664bdb5f096c445bb149-857x1284.jpg" alt="Photo of Ciel Park" class="h-140 object-cover z-0 mix-blend-multiply" />
             </div>
         </div>
     </section>
@@ -47,7 +47,7 @@ const experiences: Experience[] = await sanityClient.fetch(`
 			<h2>✦ Experience</h2>
             <div class="flex flex-col gap-10">
                 {experiences.map((experience) => (
-                    <div class="flex flex-col md:flex-row justify-between pt-4 border-t border-black gap-4">
+                    <div class="flex flex-col md:flex-row justify-between pt-4 border-t border-dark gap-4">
                         <div class="flex flex-col gap-4">
                             <h3>{experience.company}</h3> 
                             <h5>{experience.role}</h5> 
