temp page load animation

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -24,16 +24,16 @@
           <div class="flex flex-col gap-2">
             <h3 class="mb-2">Elsewhere</h3>
             <a href="https://www.linkedin.com/in/clprk/">
-              <h5>Linkedin</h5>
+              <h5>LinkedIn</h5>
             </a>
             <a href="https://www.figma.com/@clprk">
               <h5>Figma</h5>
             </a>
             <a href="https://github.com/clprk">
-              <h5>Github</h5>
+              <h5>GitHub</h5>
             </a>
             <a href="https://codepen.io/clprk">
-              <h5>Codepen</h5>
+              <h5>CodePen</h5>
             </a>
           </div>
           <a href="../" class="text-3xl">✦</a>
