--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -1,5 +1,6 @@
 <!-- Navigation -->
-<section class="absolute top-0 left-0 right-0 z-50 mix-blend-difference text-white">
+<!-- <section class="absolute top-0 left-0 right-0 z-50 mix-blend-difference text-white"> -->
+ <section class="absolute top-0 left-0 right-0 z-50 text-dark font-medium drop-shadow-[0_0px_4px_rgba(242,238,228,1)]">
   <nav class="container-custom py-2 uppercase">
     <div class="flex h-12 items-center justify-between">
       <a href="../" class="text-3xl">✦</a>
